# prepobs_bgc

./: .gitignore  .pre-commit-config.yaml  404.html  LICENSE  Makefile  README.md  environment.yml  index.html  mkdocs.yml  objects.inv  pyproject.toml
config/default/: compare_sim_obs.toml  extract_data.toml  extract_water_mass.toml  plot_data_density.toml  plot_interactive.toml  plot_profile.toml  plot_ts_diagram.toml  plot_var_boxplot.toml  plot_var_histogram.toml  plot_var_pressure.toml  providers.toml  save_data.toml  variables.toml  water_masses.toml
contributing/: index.html
docs/: index.md
docs/automation/: pages_generator.py
docs/contributing/: index.md
docs/examples/: boundaries.md  index.md  plot.md
docs/how_it_works/: closest_point_find.md  index.md  loading.md  plotting.md  variables.md
docs/scripts/: compare_sims_obs.md  extract_data.md  extract_water_mass.md  index.md  plot_data_density.md  plot_interactive.md  plot_profile.md  plot_ts_diagram.md  plot_var_boxplot.md  plot_var_histogram.md  plot_var_pressure.md  save_data.md
docs/virtual_env/: index.md
examples/: index.html
examples/boundaries/: index.html
examples/plot/: index.html
how_it_works/: index.html
how_it_works/closest_point_find/: index.html
how_it_works/loading/: index.html
how_it_works/plotting/: index.html
how_it_works/variables/: index.html
polygons/: arcatl.txt  arccan.txt  arceast.txt  barents.txt  bering.txt  greenland.txt  kara.txt  laptev.txt  norwegiann.txt  norwegians.txt  spg.txt  svinoy_transect_polygon.txt
reference/: index.html
reference/SUMMARY/: index.html
reference/comparison/: index.html
reference/core/: index.html
reference/defaults/: index.html
reference/exceptions/: index.html
reference/features/: index.html
reference/parsers/: index.html
reference/providers/: index.html
reference/tracers/: index.html
reference/units/: index.html
reference/utils/: index.html
reference/verbose/: index.html
reference/water_masses/: index.html
scripts/: compare_sim_obs.py  extract_data.py  extract_water_mass.py  index.html  plot_data_density.py  plot_interactive.py  plot_profile.py  plot_ts_diagram.py  plot_var_boxplot.py  plot_var_histogram.py  plot_var_pressure.py  save_data.py
scripts/compare_sims_obs/: index.html
scripts/extract_data/: index.html
scripts/extract_water_mass/: index.html
scripts/plot_data_density/: index.html
scripts/plot_interactive/: index.html
scripts/plot_profile/: index.html
scripts/plot_ts_diagram/: index.html
scripts/plot_var_boxplot/: index.html
scripts/plot_var_histogram/: index.html
scripts/plot_var_pressure/: index.html
scripts/save_data/: index.html
search/: search_index.json
src/abfile/: LICENSE.md  __init__.py  abfile.py  test.py
tests/: __init__.py
virtual_env/: index.html
(+75 files in other folders)
